/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.4.1/userguide/building_java_projects.html
 */

buildscript {
    ext {
        springBootVersion = "2.7.0"
        releaseVersion = "1.0.0"
    }
    repositories {
        mavenLocal()
        mavenCentral()
		gradlePluginPortal()
		maven {
		  url "https://plugins.gradle.org/m2/"
		}
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
		classpath("gradle.plugin.org.hidetake:gradle-swagger-generator-plugin:2.18.2")
		classpath("org.apache.maven.plugins:maven-dependency-plugin:3.1.2")
    }

}


plugins {
    // the plugins DSL is replacing apply plugin over time for Java-plugins. It is therefore favoured over the legacy "apply plugin:" approach
    id "java"
    id "eclipse"
}

apply plugin: "io.spring.dependency-management"
apply plugin: "org.springframework.boot"
apply plugin: "maven-publish"
apply plugin: "org.hidetake.swagger.generator"

repositories {
        mavenLocal()
        mavenCentral()
		gradlePluginPortal()
		maven {
		  url "https://plugins.gradle.org/m2/"
		}
    }

group 'com.mb.dna'
version = releaseVersion;

sourceCompatibility = 1.17
targetCompatibility = 1.17
tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }


//__________________________________________________________//
//_____________________ SWAGGER CONFIGURATION ______________//
swaggerSources {

    fabricWorkspace {
        def fabricWorkspaceyaml = "${rootDir}/lib/src/main/resources/api/fabricWorkspaces.yaml"
        def fabricWorkspaceJson = "${rootDir}/lib/src/main/resources/api/fabricWorkspaces.json"
        inputFile = file(fabricWorkspaceyaml)

        def ignoreFile = "${rootDir}/lib/src/main/resources/api/.swagger-codegen-ignore"

        code {
            language = 'spring'
            configFile = file(fabricWorkspaceJson)
            rawOptions = ['--ignore-file-override', ignoreFile]
            components = ['models', 'apis']
        }
    }

    tag {
        def tagyaml = "${rootDir}/lib/src/main/resources/api/Tag.yaml"
        def tagJson = "${rootDir}/lib/src/main/resources/api/Tag.json"
        inputFile = file(tagyaml)

        def ignoreFile = "${rootDir}/lib/src/main/resources/api/.swagger-codegen-ignore"

        code {
            language = 'spring'
            configFile = file(tagJson)
            rawOptions = ['--ignore-file-override', ignoreFile]

            components = ['models', 'apis']
        }
    }
}

compileJava {
    dependsOn processResources
    dependsOn swaggerSources.fabricWorkspace.code
    source "${swaggerSources.fabricWorkspace.code.outputDir}/src/main/java"  
    dependsOn swaggerSources.tag.code
    source "${swaggerSources.tag.code.outputDir}/src/main/java"
}

sourceSets {
    unitTest {
        java { srcDir 'src/test/groovy' }
        resources { srcDir 'src/test/resources' }
        compileClasspath += sourceSets.main.runtimeClasspath
    }
    main {
        java { srcDirs = srcDirs }
		java { srcDirs += "${swaggerSources.fabricWorkspace.code.outputDir}/src/main/java" }
        java { srcDirs += "${swaggerSources.tag.code.outputDir}/src/main/java"}
    }
}


dependencies {

	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.2.0'

	implementation group: 'javax.el', name: 'javax.el-api', version: '2.2.4'
	implementation group: 'org.glassfish.web', name: 'javax.el', version: '2.2.4'

	implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.4.2'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.0'
	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.20'
    //implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-vault-config', version: '3.1.1'
	implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.9.2'
	
	implementation group: 'org.yaml', name: 'snakeyaml', version: '1.30'
    
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.4.0'
    implementation group: 'org.json', name: 'json', version: '20190722'

    implementation('ch.qos.logback:logback-classic:1.2.3')

    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
    implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.30'
    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.30'
    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.30'

    implementation('ch.qos.logback:logback-core:1.2.3')

	//implementation group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
    
	//implementation (group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'){
    //    exclude (group: 'com.fasterxml.jackson.core')
    //}
	
	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.3'
	
	//implementation group: 'com.graphql-java', name: 'graphql-java-extended-scalars', version: '1.0'
	
    
    implementation 'io.swagger:swagger-annotations:1.6.2'

    swaggerCodegen 'io.swagger:swagger-codegen-cli:2.4.20'

    implementation group: 'cglib', name: 'cglib-nodep', version: '3.3.0'
    
    implementation('org.springframework.boot:spring-boot-starter-web')

	implementation('org.apache.tomcat.embed:tomcat-embed-jasper:10.0.5')

    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
	
    implementation('io.springfox:springfox-swagger-ui:2.9.2')
    
    implementation group: 'org.codehaus.mojo', name: 'animal-sniffer-annotations', version: '1.20'
    
    implementation group: 'org.antlr', name: 'antlr4-runtime', version: '4.9.2'

    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
	
	implementation('org.springframework.boot:spring-boot-starter-aop')
	
    implementation 'org.projectlombok:lombok:1.18.22'
    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    
    implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.7'
	implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.2'

    implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
    
	 implementation("com.squareup.okhttp3:okhttp") {
        version {
            strictly '4.9.0'
        }
    }
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
